syntax = "proto3";
package emerald.vault;
import "address.proto";

message BookItem {
    string label = 1;
    string description = 2;
    uint32 blockchain = 3;
    Address address = 4;
}
